Partially fixed the entire page shifting when activating language switch

--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -99,7 +99,7 @@
     opacity: 0.3;
     border-radius: 100px;
     z-index: 1;
-    right: 10px;
+    right: 30px;
     top: 70px;
 }
 .p-link{
